--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Financial Checkup App</title>
-        <link rel="icon" type="image/png" href="./images/favicon.png" />
+        <title>Elefend</title>
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css?family=Noto+Serif&display=swap" rel="stylesheet"> 
+        <link rel="icon" type="image/png" href="./assets/logo.png" />
+        <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">    
     </head>
     <body>
         <div id="app"></div>
+        <script defer src="./assets/material.min.js"></script>
         <script src="/bundle.js"></script>
     </body>
 </html>
