--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     </head>
     <body>
         <div id="app"></div>
-        <script defer src="./assets/material.min.js"></script>
+        <script defer src="./assets/js/material.min.js"></script>
         <script src="/bundle.js"></script>
     </body>
 </html>
